[gd_scene load_steps=28 format=2]

[ext_resource path="res://scene/GamePlay.gd" type="Script" id=1]
[ext_resource path="res://assets/images/32x32/opentile.png" type="Texture" id=2]
[ext_resource path="res://assets/images/32x32/2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/32x32/4.png" type="Texture" id=4]
[ext_resource path="res://assets/images/32x32/1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/32x32/3.png" type="Texture" id=6]
[ext_resource path="res://assets/images/32x32/bomb.png" type="Texture" id=7]
[ext_resource path="res://assets/images/32x32/7.png" type="Texture" id=8]
[ext_resource path="res://assets/images/32x32/5.png" type="Texture" id=9]
[ext_resource path="res://assets/images/32x32/8.png" type="Texture" id=10]
[ext_resource path="res://assets/images/32x32/closedtile.png" type="Texture" id=11]
[ext_resource path="res://assets/images/32x32/6.png" type="Texture" id=12]
[ext_resource path="res://assets/images/32x32/closedtile-pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/images/32x32/flag.png" type="Texture" id=14]
[ext_resource path="res://assets/images/32x32/misflagged.png" type="Texture" id=15]
[ext_resource path="res://scene/Camera2D.gd" type="Script" id=16]
[ext_resource path="res://scene/MenuPopupWindow.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/fonts/pixel-font-title.tres" type="DynamicFont" id=18]

[sub_resource type="TileSet" id=1]
0/name = "opentile.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "1.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "2.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "3.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "4.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "5.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "6.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "7.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "8.png 7"
7/texture = ExtResource( 10 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "bomb.png 8"
8/texture = ExtResource( 7 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "closedtile.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "closedtile-pressed.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "flag.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "misflagged.png 0"
0/texture = ExtResource( 15 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="GamePlay" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="ItemLayer" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="TopLayer" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="FlagLayer" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="MistakeLayer" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 16 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 64 )
color = Color( 0, 0, 0, 0.470588 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect"]
anchor_right = 1.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="menu" type="Label" parent="CanvasLayer/ColorRect/CenterContainer"]
margin_left = 448.0
margin_top = 24.0
margin_right = 512.0
margin_bottom = 40.0
mouse_filter = 0
custom_fonts/font = ExtResource( 18 )
text = "MENU"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_bottom = 1.0
custom_constants/separation = 15

[node name="mine_text" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer"]
margin_top = 24.0
margin_right = 95.0
margin_bottom = 40.0
rect_min_size = Vector2( 95, 0 )
custom_fonts/font = ExtResource( 18 )
text = "MINE:"
align = 2

[node name="mine_size" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer"]
margin_left = 110.0
margin_top = 24.0
margin_right = 142.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 18 )
text = "00"
align = 2

[node name="map_size" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer"]
margin_left = 157.0
margin_top = 24.0
margin_right = 237.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 18 )
text = "10x10"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
custom_constants/separation = 10
alignment = 2

[node name="best_text" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer2"]
margin_left = 110.0
margin_top = 24.0
margin_right = 190.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 18 )
text = "BEST:"
align = 2
valign = 1

[node name="best_score" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer2"]
margin_left = 200.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 18 )
text = "01:00"
valign = 1

[node name="play_time" type="Label" parent="CanvasLayer/ColorRect/HBoxContainer2"]
margin_left = 290.0
margin_top = 24.0
margin_right = 380.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = ExtResource( 18 )
text = "00:00"
align = 2
valign = 1

[node name="Control" type="Control" parent="CanvasLayer/ColorRect/HBoxContainer2"]
margin_left = 390.0
margin_right = 400.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
margin_bottom = -16.0

[node name="background" type="ColorRect" parent="CanvasLayer/CenterContainer"]
margin_left = 280.0
margin_top = 82.0
margin_right = 680.0
margin_bottom = 382.0
rect_min_size = Vector2( 400, 300 )
color = Color( 0, 0, 0, 0.705882 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="title" type="Label" parent="CanvasLayer/CenterContainer/background/VBoxContainer"]
margin_right = 400.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
custom_constants/line_spacing = 18
custom_fonts/font = ExtResource( 18 )
text = "CONGRATULATIONS!
YOU WIN!"
align = 1
valign = 1

[node name="mapsize" type="Label" parent="CanvasLayer/CenterContainer/background/VBoxContainer"]
margin_top = 134.0
margin_right = 400.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 30 )
custom_constants/line_spacing = 18
custom_fonts/font = ExtResource( 18 )
text = "MAP SIZE: 12x12"
align = 1
valign = 1

[node name="mineratio" type="Label" parent="CanvasLayer/CenterContainer/background/VBoxContainer"]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 30 )
custom_constants/line_spacing = 18
custom_fonts/font = ExtResource( 18 )
text = "MINE RATIO: 25%"
align = 1
valign = 1

[node name="timespent" type="Label" parent="CanvasLayer/CenterContainer/background/VBoxContainer"]
margin_top = 202.0
margin_right = 400.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 30 )
custom_constants/line_spacing = 18
custom_fonts/font = ExtResource( 18 )
text = "TIME SPENT: 00:30"
align = 1
valign = 1

[node name="restart" type="Button" parent="CanvasLayer/CenterContainer/background/VBoxContainer"]
margin_top = 236.0
margin_right = 400.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "RESTART"

[node name="MenuPopupWindow" parent="." instance=ExtResource( 17 )]

[connection signal="gui_input" from="CanvasLayer/ColorRect/CenterContainer/menu" to="." method="_on_menu_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/ColorRect/CenterContainer/menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ColorRect/CenterContainer/menu" to="." method="_on_menu_mouse_exited"]
[connection signal="button_down" from="CanvasLayer/CenterContainer/background/VBoxContainer/restart" to="." method="_on_restart_button_down"]
[connection signal="on_hide" from="MenuPopupWindow" to="." method="_on_MenuPopupWindow_on_hide"]
[connection signal="on_restart" from="MenuPopupWindow" to="." method="_on_MenuPopupWindow_on_restart"]
